[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["luuducquy0510 <luuducquy05102003@gmail.com>"]
package-mode = false
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.11"}
sqlalchemy = "^2.0.38"
passlib = "^1.7.4"
jwt = "^1.3.1"
sqlmodel = "^0.0.24"
pyjwt = "^2.10.1"
psycopg2-binary = "^2.9.10"
langchain-community = "^0.3.19"
google-generativeai = "^0.8.4"
pypdf = "^5.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
